# haskell-image-compression

./: ImageCompression.hs  Main.hs  README.md  image-compression.cabal  notes.txt  quadtree.hs  quadtree_tests.hs  submission.hs
app/: Main.hs
other/: Base.hs  QuadtreeTests.hs
src/: Compression.hs  ImageProcessing.hs  Quadtree.hs  Types.hs
